# tessera

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/tessera-channel/: README.md
crates/tessera-channel/src/: channel.rs  lib.rs  namespace.rs  region.rs
crates/tessera-pool/: Cargo.toml  README.md
crates/tessera-pool/src/: error.rs  header.rs  lib.rs  pool.rs
crates/tessera-ring/: README.md
crates/tessera-ring/src/: lib.rs  region.rs  ring.rs
crates/tessera-sink/: Cargo.toml  README.md
crates/tessera-sink-worker/: Cargo.toml  README.md
crates/tessera-sink-worker/src/: main.rs
crates/tessera-sink-worker/tests/: integration.rs
crates/tessera-sink/src/: config.rs  error.rs  lib.rs  messages.rs  names.rs  sink.rs  spawn.rs  worker.rs
crates/tessera-slate/: Cargo.toml  README.md
crates/tessera-slate/src/: error.rs  header.rs  lib.rs  namespace.rs  region.rs  slate.rs
docs/: decision_log.md  rfc_sink_worker_packaging.md
examples/: channel_mpsc.py  pool_intra_container.py  ring_broadcast.py
python/py-tessera-channel/: pyproject.toml
python/py-tessera-channel/tests/: test_channel.py
python/py-tessera-pool/: pyproject.toml
python/py-tessera-pool/python/tessera_pool/: __init__.py
python/py-tessera-pool/src/: lib.rs
python/py-tessera-pool/tests/: test_pool.py
python/py-tessera-ring/: Cargo.toml  pyproject.toml
python/py-tessera-ring/src/: lib.rs
python/py-tessera-ring/tests/: test_ring.py
python/py-tessera-sink/: Cargo.toml  pyproject.toml
python/py-tessera-sink/src/: lib.rs
(+2 files in other folders)
